// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`forgot password email required validation 1`] = `
Object {
  "feedback": Object {
    "email": Array [
      "expected string email",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`forgot password invalid email validation 1`] = `
Object {
  "feedback": Object {
    "email": Array [
      "A valid email is required.",
    ],
  },
  "message": "Validation Error",
}
`;
